[package]
name = "titan-voltr-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
titan-integration-template = { path = "../integration-template" }
solana-pubkey = "2.2.1"
solana-sdk = "2.2.1"
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-program = "2.2.1"
solana-program-pack = "2.2.1"
spl-token = { version = "7", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^9", features = ["no-entrypoint"] }
spl-associated-token-account = "6"
anyhow = "1"
async-trait = "0.1.80"
thiserror = "1.0.61"
log = "0.4.28"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
rstest = "0.18"
litesvm = "^0.6.1"
rand = "0.9.2"
assert_no_alloc = { version = "1.1.2", default-features = false }
env_logger = "0.11.3"
solana-client = "2.2.1"
solana-compute-budget = "2.2.1"
solana-transaction = "2.2.1"
solana-sysvar = "2.2.1"
